# Alya

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/bot/: bot.cpp  bot.hpp  botinfo.hpp  packet_handler.hpp
src/bot/inventory/: inventory.cpp  inventory.hpp
src/bot/item/: item.cpp  item.hpp
src/bot/login/: login.cpp  login.hpp
src/bot/packet/: packet_handler.cpp  packet_handler.hpp  variant_handler.cpp  variant_handler.hpp
src/bot/world/: world.cpp  world.hpp
src/gui/: gui.cpp  gui.hpp
src/manager/: manager.cpp  manager.hpp
src/types/: e_login_method.hpp  e_packet_type.hpp  e_tankpacket_type.hpp  eloginmethod.hpp  login_info.hpp  tank_packet.hpp
src/utils/: hash.hpp  proton.hpp  random.cpp  random.hpp  textparse.cpp  textparse.hpp  variant.hpp
